# lexisflow

./: .gitignore  AGENTS.md  README.md  STATUS_TRACKER.md  app.py  pyproject.toml  pytest.ini
configs/: forest_flow_config.yaml  mortality_classifier_config.yaml
data/processed/: COMPLETE_DATA_PROCESSING_DOCUMENTATION.md  completely_missing_columns.txt
docs/: ADDITIONAL_TSTR_TASKS.md  COMPLEXITY_REDUCTION_PLAN.md  README.md  SWEEP_ARCHITECTURE.md  challenge2012.md
docs/architecture/: PROJECT_ARCHITECTURE.md
docs/data/: features.md  mimic-schema.md  processing.md
docs/guides/: autoregressive-forest-flow.md
docs/project/: status.md
report_latex/: README.md  informatics-report.cls  lexisflow_appendices.tex  lexisflow_report.tex  report.tex
report_latex/Appendices/: Appendix.tex  SourceCode.tex  UserGuide.tex
report_latex/Chapters/: Background.tex  Body.tex  Conclusion.tex  DesignSpecification.tex  Evaluation.tex  Implementation.tex  ProfessionalIssues.tex  (+1 more)
scripts/: 00_prepare_hour0_data.py  00b_fit_hour0_preprocessor.py  00c_train_hour0_model.py  01_preprocess_data.py  01b_fit_preprocessor.py  02_train_model.py  03_generate_synthetic.py  WORKFLOW.md  analyze_column_coverage.py  analyze_column_removal.py  analyze_sweep.py  build_column_removal_recommendations.py  fit_autoregressive_preprocessor.py  fit_hour0_preprocessor.py  generate.py  plot_sweep_results.py  prepare_autoregressive.py  prepare_hour0.py  report_column_coverage.py  run_backbone_comparison.py  run_matched_backbone_comparison.py  run_sweep.py  train_autoregressive.py  train_hour0.py
(+95 files in other folders)
